--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
 	"register-cmd": "/register zaq12wsx zaq12wsx",
 	"login-cmd": "/login zaq12wsx",
 	"first-message": "Dupa",
-	"bot-owners": ["Erykgtav","ErykKoks","Erykizd","WujaJurek","Kyre"],
+	"bot-owners": ["Erykgtav","ErykKoks","Erykizd","WujaJurek","Kyre","CarlCorey"],
 	"tp-to-owner": "/tpa Erykgtav"
 }
  
